FIX overflow text in homepage

--- a/shopping-app/src/App.css
+++ b/shopping-app/src/App.css
@@ -46,8 +46,8 @@ a {
 }
 
 .shoppingItem {
-  width: 210px;
-  height: 400px;
+  width: 300px;
+  height: 500px;
   text-align: left;
   position: relative;
   vertical-align: top;
@@ -65,6 +65,10 @@ a {
   padding-right: 15px;
 }
 
+.cartImage {
+  width: 20%;
+  height: 50%;
+}
 img {
   width: 100%;
   height: 100%;
@@ -92,7 +96,10 @@ li {
 
 .sortFilter {
   margin-right: 40px;
+  width: 30%;
 }
+
+
 
 .selected {
   background-color: goldenrod;
@@ -100,13 +107,14 @@ li {
 
 
 .checkout-page {
-  width: 55%;
+  width: 100%;
   min-height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 50px auto 0;
 }
+
 .checkout-header {
   width: 100%;
   padding: 10px 0;
@@ -114,9 +122,11 @@ li {
   justify-content: space-between;
   border-bottom: 1px solid darkgrey;
 }
+
 .header-block {
   text-transform: capitalize;
-  width: 23%;
+  width: 30%;
+  margin: 40px;
 }
 
 .total {
@@ -133,6 +143,8 @@ li {
 .cartItem {
   width: 100%;
   display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   min-height: 100px;
   border-bottom: 1px solid darkgrey;
   padding: 15px 0;
@@ -143,7 +155,9 @@ li {
 .name-container{
   width: 10%;
   margin-bottom: 15px;
-  text-overflow: clip;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 .price-container{
   width: 23%;
